# TheTradingGame

./: .deployment-trigger  .env.example  .gitignore  BUILDING-CONSTRUCTION-SYSTEM.md  CHALLENGE-WEBSOCKET-IMPLEMENTATION.md  CHALLENGE-WEBSOCKET-TESTING.md  CHALLENGE_SYSTEM_README.md  CLI-SETUP.md  DASHBOARD_REFRESH_FIX.md  FEATURE-GAME-DURATION.md  FIX_BANKER_NOT_FOUND.md  FLOW_DIAGRAM.md  IMPLEMENTATION_SUMMARY_FOOD_TAX.md  OSM_OAUTH_SETUP.md  QUICKSTART.md  README.md  SCOUT_COLORS.md  TRADING_FEATURE_README.md  TRADING_IMPLEMENTATION_SUMMARY.md  TRADING_SYSTEM_TESTING.md  pyproject.toml  pyrightconfig.json  requirements.txt  restart-servers.sh  setup.py  setup.sh  stop-servers.sh  trading-game-cli.sh  trading_game_cli.py
.github/: copilot-instructions.md
backend/: .env.example  __init__.py  auth.py  challenge_api.py  challenge_manager.py  database.py  email_utils.py  event_api.py  event_config.json  event_manager.py  food_tax_api.py  food_tax_manager.py  food_tax_scheduler.py  game_constants.py  game_logic.py  main.py  manual_test_buildings.py  manual_test_price_fluctuation.py  migrate.py  models.py  osm_oauth.py  osm_oauth_api.py  price_fluctuation_scheduler.py  pricing_manager.py  pytest.ini  requirements-test.txt  requirements.txt  scenario_event_scheduler.py  scenarios.py  schemas.py  startup.sh  trade_manager.py  trading_api.py  trading_game.db  trading_system.py  utils.py  websocket_manager.py
docs/: DOCS.md  FEATURE-KINDNESS-SCORING.md  HISTORICAL_SCENARIOS.md  IMPLEMENTATION-KINDNESS-SCORING.md  IMPLEMENTATION_SUMMARY.md  PLAYER_INSTRUCTIONS.md  README.md  (+4 more)
(+75 files in other folders)
